--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'io.awspring.cloud:spring-cloud-aws-testcontainers'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
